--- a/style.css
+++ b/style.css
@@ -10,6 +10,13 @@ margin: left;
 #search-container{
     text-align: center;
     display: block;
+    position: absolute;
+    left: 50%;
+    top: 50%;    
+    margin-top: -11px;
+    margin-left: -75px;
+    width: 150px;
+    height: 22px;
 }
 
 #search {
@@ -21,3 +28,21 @@ margin: left;
     margin-left:auto;
 }
 
+#header-search {
+}
+
+img  { 
+    float: left;
+}
+
+#search-container1{
+    /* text-align: center; */
+    display: block;
+    /* position: absolute;
+    left: 50%;
+    top: 50%;    
+    margin-top: -11px;
+    margin-left: -75px; */
+    width: 60%;
+    height: 22px;
+}
