--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
- /* #container1 {
+/*  #container1 {
 float: left;
 margin: left;
 }
 
 #navbarSupportedContent {     
     margin-left: center;
-} */
+} 
 
 #search-container{
     text-align: center;
@@ -15,9 +15,46 @@ margin: left;
 #search {
     text-align: center;
     display: block;
-} 
-
+}   */
+#myVideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+  }
+  .contentC {
+    
+   
+    background: rgba(0, 0, 0, 0.5);
+    color: #f1f1f1;
+  
+    
+  }  
+  .bookC {
+    
+    
+    background: rgba(0, 0, 0, 0.5);
+    color: #f1f1f1;
+    width: 100%;
+    padding: 20px;
+  }
 .nav-link   {
     margin-left:auto;
 }
-
+ #search-container {
+    align-items: center;
+}
+#description {
+  text-align: center;
+}
+#search-bar {
+  text-align: center;
+}
+#searchButton {
+  text-align: center;
+}
+#search-container {
+  align-items: center;
+}
+ 
