--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ margin: left;
     background: rgba(0, 0, 0, 0.5);
     color: #f1f1f1;
     padding-right:475px;
-    font-size: 500px;
+    /* font-size: 500px; */
     
   }  
   .bookC {
@@ -44,8 +44,8 @@ margin: left;
     
     background: rgba(0, 0, 0, 0.5);
     color: #f1f1f1;
-    width: 100%;
-    padding: 20px;
+    width: 95%;
+    margin: 50px;
   }
 .nav-link   {
     margin-left:auto;
@@ -89,4 +89,12 @@ margin: left;
     margin: 4px 2px;
     transition-duration: 0.4s;
     cursor: pointer;
+  }
+
+  .contact-page-body    {
+    background-image: url('http://alcalde.texasexes.org/wp-content/uploads/2011/11/use-old-tv-as-dvd-storage-box-1-500x331-copy1.jpg');
+  }
+
+  * {
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   }
