--- a/style.css
+++ b/style.css
@@ -25,14 +25,14 @@ margin: left;
 }   */
 
 
-/*  #myVideo {
+ #myVideo {
     position: fixed;
     right: 0;
     bottom: 0;
     min-width: 100%;
     min-height: 100%;
   } 
-/*   .contentC {
+   .contentC {
     
    
     background: rgba(0, 0, 0, 0.5);
@@ -48,7 +48,7 @@ margin: left;
     color: #f1f1f1;
     width: 100%;
     padding: 20px;
-  } */ 
+  }  
 .nav-link   {
     margin-left:auto;
 }
