--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ margin: left;
 #myVideo {
     position: fixed;
     right: 0;
-    bottom: 
     min-width: 100%;
     min-height: 100%;
   }
@@ -93,11 +92,13 @@ margin: left;
     cursor: pointer;
   }
 
+  .buyBtn {
+      font-size: 12px;
+      padding: 5px;
+  }
+
   @media (max-width: 768px) {
-    body {
-        margin: 0;
-        padding: 0;
-    }
+    
 }
 
 .contact-image  {
