--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ html, body {
     text-align: center;
 }
 
-.btn {
+/* .btn {
     border: none;
     color: white;
     padding: 16px 32px;
@@ -72,7 +72,7 @@ html, body {
     margin: 4px 2px;
     transition-duration: 0.4s;
     cursor: pointer;
-  }
+  } */
 
   @media (max-width: 768px) {
     body {
