--- a/style.css
+++ b/style.css
@@ -21,11 +21,20 @@ body {
 
 html, body {
   height: 100%;
+  background-color: #333;
   background-image: url('http://alcalde.texasexes.org/wp-content/uploads/2011/11/use-old-tv-as-dvd-storage-box-1-500x331-copy1.jpg');
 }
 
 nav {
     background-color: #333;
+}
+
+.aboutContainer {
+    background-image: none;
+    background-color: #333;
+    padding: 15px;
+    color: #fff;
+    text-align: center;
 }
 
 .searchRow {
@@ -75,7 +84,11 @@ nav {
 } 
 
 .img1   {
-    float:left;
+    margin-left: auto;
+    margin-right: auto;
+    width: 15%;
+    display: block;
+    margin-bottom: 15px;
 }
 
 #book-search    {
